Fixed issue with personality bars where text over certain length would break the bars

--- a/static/style.css
+++ b/static/style.css
@@ -666,6 +666,8 @@ body {
 
 .barBack {
     width: 150px;
+    
+    height: 25px;
 }
 
 .profileHead {
